frontend: - add features to the form - handle sending requests to the backend backend: - delete unnecessary endpoints - add delete Park Detailed
